Create frontend docker (#3)
* modify dockerfiles

* modify dockerfiles

* update full-app docker file

* docker compose file

Co-authored-by: Lakpriya Kottahachchi <lakpriya.kottahachchi@visolit.no>

--- a/full-app/Dockerfile
+++ b/full-app/Dockerfile
@@ -1,14 +1,17 @@
-# Build the application
+# Build the code
 FROM openjdk AS build
 COPY . /app/
 WORKDIR /app/
+
 RUN chmod +x ./mvnw
 RUN ./mvnw clean verify
 
-# Building the image 
-FROM openjdk:17-alpine
+# Building the image
+FROM openjdk:8-jre-alpine
 
-#copy jar file from builder
-COPY --from=build /app/target/*.jar contoso-payroll-app.jar
+#copy jar file from the build
+COPY --from=build /app/target/contoso-payroll-*.jar /contoso/
+
 EXPOSE 8080
-ENTRYPOINT ["java","-jar","contoso-payroll-app.jar"]
+
+CMD java -jar /contoso/contoso-payroll-*.jar
