--- a/full-app/azure-pipelines-full-app.yml
+++ b/full-app/azure-pipelines-full-app.yml
@@ -50,7 +50,7 @@ stages:
         displayName: Build and Push 
         inputs:
           command: buildAndPush
-          containerRegistry: 'lakpriyagk-docker-hub-service-connection'
+          containerRegistry: $(SERVICE_CONNECTION)
           Dockerfile: full-app/Dockerfile
           repository: 'lakpriyagk/contoso-payroll-app'
           tags: '$(Build.BuildId)'
