--- a/infrastucture/azure-pipelines-infra.yml
+++ b/infrastucture/azure-pipelines-infra.yml
@@ -29,46 +29,46 @@ pool:
   vmImage: windows-latest
 
 stages:
-- stage: DeployAppServicePlan
-  jobs:
-   - job: DeployAppServicePlan 
-     displayName: 'Deploy AppService Plan'
-     steps:
-     - task: AzureResourceGroupDeployment@2
-       inputs:
-         azureSubscription: $(SERVICE_CONNECTION)
-         action: 'Create Or Update Resource Group'
-         resourceGroupName: '$(RESOURCEGROUP_NAME)'
-         location: $(LOCATION)
-         deploymentMode: 'Incremental'
-         templateLocation : 'URL of the file'
-         csmFileLink: 'https://raw.githubusercontent.com/lakpj/contoso-payroll/deploy-webapp/infrastucture/AppServicePlan/azuredeploy.json'
-         csmParametersFileLink: 'https://raw.githubusercontent.com/lakpj/contoso-payroll/deploy-webapp/infrastucture/AppServicePlan/azuredeploy.parameters.json'
-         deploymentName: 'DeployAppServicePlan'
-- stage: DeployWebappToServicePlan 
-  dependsOn:
-  - DeployAppServicePlan
-  condition: succeeded('DeployAppServicePlan')
-  jobs:  
-  - job: DeployWebapp 
-    displayName: 'Deploy Webapp To Application Service Plan'
-    steps:    
-    - task: AzureResourceManagerTemplateDeployment@3
-      inputs:
-        azureResourceManagerConnection: $(SERVICE_CONNECTION)
-        action: 'Create Or Update Resource Group'
-        resourceGroupName: '$(RESOURCEGROUP_NAME)'
-        location: $(LOCATION)
-        deploymentMode: 'Incremental'
-        templateLocation : 'URL of the file'
-        csmFileLink: 'https://raw.githubusercontent.com/lakpj/contoso-payroll/deploy-webapp/infrastucture/Webapp/azuredeploy.json'
-        csmParametersFileLink: 'https://raw.githubusercontent.com/lakpj/contoso-payroll/deploy-webapp/infrastucture/Webapp/azuredeploy.parameters.json'
-        deploymentScope: 'Resource Group'    
-        deploymentName: 'DeployWebapp'  
+# - stage: DeployAppServicePlan
+#   jobs:
+#    - job: DeployAppServicePlan 
+#      displayName: 'Deploy AppService Plan'
+#      steps:
+#      - task: AzureResourceGroupDeployment@2
+#        inputs:
+#          azureSubscription: $(SERVICE_CONNECTION)
+#          action: 'Create Or Update Resource Group'
+#          resourceGroupName: '$(RESOURCEGROUP_NAME)'
+#          location: $(LOCATION)
+#          deploymentMode: 'Incremental'
+#          templateLocation : 'URL of the file'
+#          csmFileLink: 'https://raw.githubusercontent.com/lakpj/contoso-payroll/deploy-webapp/infrastucture/AppServicePlan/azuredeploy.json'
+#          csmParametersFileLink: 'https://raw.githubusercontent.com/lakpj/contoso-payroll/deploy-webapp/infrastucture/AppServicePlan/azuredeploy.parameters.json'
+#          deploymentName: 'DeployAppServicePlan'
+# - stage: DeployWebappToServicePlan 
+#   dependsOn:
+#   - DeployAppServicePlan
+#   condition: succeeded('DeployAppServicePlan')
+#   jobs:  
+#   - job: DeployWebapp 
+#     displayName: 'Deploy Webapp To Application Service Plan'
+#     steps:    
+#     - task: AzureResourceManagerTemplateDeployment@3
+#       inputs:
+#         azureResourceManagerConnection: $(SERVICE_CONNECTION)
+#         action: 'Create Or Update Resource Group'
+#         resourceGroupName: '$(RESOURCEGROUP_NAME)'
+#         location: $(LOCATION)
+#         deploymentMode: 'Incremental'
+#         templateLocation : 'URL of the file'
+#         csmFileLink: 'https://raw.githubusercontent.com/lakpj/contoso-payroll/deploy-webapp/infrastucture/Webapp/azuredeploy.json'
+#         csmParametersFileLink: 'https://raw.githubusercontent.com/lakpj/contoso-payroll/deploy-webapp/infrastucture/Webapp/azuredeploy.parameters.json'
+#         deploymentScope: 'Resource Group'    
+#         deploymentName: 'DeployWebapp'  
 - stage: EnableMonitoringToWebapp 
-  dependsOn:
-  - DeployWebappToServicePlan
-  condition: succeeded('DeployWebappToServicePlan')
+  # dependsOn:
+  # - DeployWebappToServicePlan
+  # condition: succeeded('DeployWebappToServicePlan')
   jobs:
   - job: EnableMonitoring 
     displayName: 'Enable Monitoring To Webapp'
