--- a/infrastucture/azure-pipelines-infra.yml
+++ b/infrastucture/azure-pipelines-infra.yml
@@ -45,30 +45,30 @@ stages:
 #          csmFileLink: 'https://raw.githubusercontent.com/lakpj/contoso-payroll/deploy-webapp/infrastucture/AppServicePlan/azuredeploy.json'
 #          csmParametersFileLink: 'https://raw.githubusercontent.com/lakpj/contoso-payroll/deploy-webapp/infrastucture/AppServicePlan/azuredeploy.parameters.json'
 #          deploymentName: 'DeployAppServicePlan'
-# - stage: DeployWebappToServicePlan 
-#   dependsOn:
-#   - DeployAppServicePlan
-#   condition: succeeded('DeployAppServicePlan')
-#   jobs:  
-#   - job: DeployWebapp 
-#     displayName: 'Deploy Webapp To Application Service Plan'
-#     steps:    
-#     - task: AzureResourceManagerTemplateDeployment@3
-#       inputs:
-#         azureResourceManagerConnection: $(SERVICE_CONNECTION)
-#         action: 'Create Or Update Resource Group'
-#         resourceGroupName: '$(RESOURCEGROUP_NAME)'
-#         location: $(LOCATION)
-#         deploymentMode: 'Incremental'
-#         templateLocation : 'URL of the file'
-#         csmFileLink: 'https://raw.githubusercontent.com/lakpj/contoso-payroll/deploy-webapp/infrastucture/Webapp/azuredeploy.json'
-#         csmParametersFileLink: 'https://raw.githubusercontent.com/lakpj/contoso-payroll/deploy-webapp/infrastucture/Webapp/azuredeploy.parameters.json'
-#         deploymentScope: 'Resource Group'    
-#         deploymentName: 'DeployWebapp'  
-- stage: EnableMonitoringToWebapp 
+- stage: DeployWebappToServicePlan 
   # dependsOn:
-  # - DeployWebappToServicePlan
-  # condition: succeeded('DeployWebappToServicePlan')
+  # - DeployAppServicePlan
+  # condition: succeeded('DeployAppServicePlan')
+  jobs:  
+  - job: DeployWebapp 
+    displayName: 'Deploy Webapp To Application Service Plan'
+    steps:    
+    - task: AzureResourceManagerTemplateDeployment@3
+      inputs:
+        azureResourceManagerConnection: $(SERVICE_CONNECTION)
+        action: 'Create Or Update Resource Group'
+        resourceGroupName: '$(RESOURCEGROUP_NAME)'
+        location: $(LOCATION)
+        deploymentMode: 'Incremental'
+        templateLocation : 'URL of the file'
+        csmFileLink: 'https://raw.githubusercontent.com/lakpj/contoso-payroll/deploy-webapp/infrastucture/Webapp/azuredeploy.json'
+        csmParametersFileLink: 'https://raw.githubusercontent.com/lakpj/contoso-payroll/deploy-webapp/infrastucture/Webapp/azuredeploy.parameters.json'
+        deploymentScope: 'Resource Group'    
+        deploymentName: 'DeployWebapp'  
+- stage: EnableMonitoringToWebapp 
+  dependsOn:
+  - DeployWebappToServicePlan
+  condition: succeeded('DeployWebappToServicePlan')
   jobs:
   - job: EnableMonitoring 
     displayName: 'Enable Monitoring To Webapp'
