--- a/full-app/src/main/resources/application.properties
+++ b/full-app/src/main/resources/application.properties
@@ -1,17 +1,8 @@
 spring.data.rest.base-path=/api
 
-# server.port = 8080
-
-# # H2 Database
-# spring.h2.console.enabled=true
-# spring.datasource.url=jdbc:h2:mem:dcbapp
-# spring.datasource.driverClassName=org.h2.Driver
-# spring.datasource.username=sa
-# spring.datasource.password=password
-# spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-# spring.jpa.defer-datasource-initialization=true
-
-spring.h2.console.path=/h2-console
-spring.h2.console.settings.trace=false
-spring.h2.console.settings.web-allow-others=false
+spring.datasource.url= jdbc:mysql://contoso-pay-db-server.mysql.database.azure.com:3306/contosodb?useSSL=true&serverTimezone=UTC
+spring.datasource.username= sqladmin@contoso-pay-db-server
+spring.datasource.password= Password1234!
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto= create
