--- a/full-app/azure-pipelines-full-app.yml
+++ b/full-app/azure-pipelines-full-app.yml
@@ -20,21 +20,26 @@ pool:
 
 stages:
 # pipeline stage to compile backend code 
-- stage: BuildPayrollApp
+- stage: BuildandPushPayrollApp
   jobs:
-  - job: BuildPayrollApp
-    displayName: Build Payroll with Maven
+  - job: BuildandTest
+    displayName: Build and Test with Maven
     steps:
-      - task: Maven@3
+      # - task: Maven@3
+      #   inputs:
+      #     mavenPomFile: 'full-app/pom.xml'
+      #     mavenOptions: '-Xmx3072m'
+      #     javaHomeOption: 'JDKVersion'
+      #     jdkVersionOption: '1.11'
+      #     jdkArchitectureOption: 'x64'
+      #     publishJUnitResults: true
+      #     testResultsFiles: '**/surefire-reports/TEST-*.xml'
+      #     goals: 'package'
+      - task: CmdLine@2
         inputs:
-          mavenPomFile: 'full-app/pom.xml'
-          mavenOptions: '-Xmx3072m'
-          javaHomeOption: 'JDKVersion'
-          jdkVersionOption: '1.11'
-          jdkArchitectureOption: 'x64'
-          publishJUnitResults: true
-          testResultsFiles: '**/surefire-reports/TEST-*.xml'
-          goals: 'package'
+          script: |
+            chmod +x ./mvnw && ./mvnw clean verify
+          workingDirectory: $(Build.SourcesDirectory)/full-app
 
 # pipeline stage to build and push the backend container to a docker registry, authenticated through service connection 
 # - stage: PushAppContainerImage
