--- a/full-app/azure-pipelines-full-app.yml
+++ b/full-app/azure-pipelines-full-app.yml
@@ -25,22 +25,26 @@ stages:
   - job: BuildandTest
     displayName: Build and Test with Maven
     steps:
-      # - task: Maven@3
-      #   inputs:
-      #     mavenPomFile: 'full-app/pom.xml'
-      #     mavenOptions: '-Xmx3072m'
-      #     javaHomeOption: 'JDKVersion'
-      #     jdkVersionOption: '1.11'
-      #     jdkArchitectureOption: 'x64'
-      #     publishJUnitResults: true
-      #     testResultsFiles: '**/surefire-reports/TEST-*.xml'
-      #     goals: 'package'
       - task: CmdLine@2
+        displayName: Build and Test Maven
         inputs:
           script: |
             chmod +x ./mvnw && ./mvnw clean verify
-          workingDirectory: $(Build.SourcesDirectory)/full-app
-
+          workingDirectory: '$(Build.SourcesDirectory)/full-app'
+      - task: PublishTestResults@2
+        displayName: Publish Test Results
+        inputs:
+          testResultsFormat: 'JUnit'
+          testResultsFiles: '**/TEST-*.xml' 
+          searchFolder: '$(Build.SourcesDirectory)/full-app/targets/surefire-reports'
+      - task: Docker@2
+        displayName: Build and Push Docker Image
+        inputs:
+          command: buildAndPush
+          containerRegistry: $(DOCKER_SERVICE_CONNECTION)
+          Dockerfile: full-app/Dockerfile
+          repository: $(DOCKER_REGISTORY)
+          tags: '$(Build.BuildId)'
 # pipeline stage to build and push the backend container to a docker registry, authenticated through service connection 
 # - stage: PushAppContainerImage
 #   dependsOn:
