--- a/full-app/azure-pipelines-full-app.yml
+++ b/full-app/azure-pipelines-full-app.yml
@@ -4,7 +4,7 @@
 # https://aka.ms/yaml
 
 variables:
-  SERVICE_CONNECTION: lakpriyagk-docker-hub-service-connection
+- group: ContosoPayroll
 
 trigger:
   branches:
