--- a/full-app/azure-pipelines-full-app.yml
+++ b/full-app/azure-pipelines-full-app.yml
@@ -25,6 +25,30 @@ stages:
   - job: BuildandTest
     displayName: Build and Test with Maven
     steps:
+    - task: AzureResourceManagerTemplateDeployment@3
+      inputs:
+        azureResourceManagerConnection: $(ARM_SERVICE_CONNECTION)
+        action: 'Create Or Update Resource Group'
+        resourceGroupName: 'temp-rg'
+        location: westeurope
+        deploymentMode: 'Incremental'
+        templateLocation : 'URL of the file'
+        csmFile: './infrastucture/MySqldb/azuredeploy.json'
+        csmParametersFile: './infrastucture/MySqldb/azuredeploy.parameters.json'
+        deploymentScope: 'Resource Group'    
+        deploymentName: 'DeployTempDatabaseServer'
+        workingDirectory: '$(Build.SourcesDirectory)/full-app'
+    - task: AzureMysqlDeployment@1
+      inputs:
+        azureSubscription: $(ARM_SERVICE_CONNECTION)
+        ServerName: $(MYSQL_SERVER_NAME)
+        SqlUsername: $(MYSQL_USER_NAME)
+        SqlPassword: $(MYSQL_PWD)
+        TaskNameSelector: 'InlineSqlTask'
+        SqlInline: |
+          DROP DATABASE IF EXISTS contosodb;
+          CREATE DATABASE contosodb;
+          USE contosodb;
       - task: CmdLine@2
         displayName: Build and Test Maven
         inputs:
@@ -35,7 +59,7 @@ stages:
         displayName: Publish Test Results
         inputs:
           testResultsFormat: 'JUnit'
-          testResultsFiles: '**/TEST-*.xml' 
+          testResultsFiles: './TEST-*.xml' 
           searchFolder: '$(Build.SourcesDirectory)/full-app/targets/surefire-reports'
       - task: Docker@2
         displayName: Build and Push Docker Image
@@ -45,21 +69,10 @@ stages:
           Dockerfile: full-app/Dockerfile
           repository: $(DOCKER_REGISTORY)
           tags: '$(Build.BuildId)'
-# pipeline stage to build and push the backend container to a docker registry, authenticated through service connection 
-# - stage: PushAppContainerImage
-#   dependsOn:
-#   - BuildPayrollApp
-#   condition: succeeded('BuildPayrollApp')
-#   jobs:
-#   - job: PushAppImage
-#     displayName: Build and Push container image to docker hub
-
-#     steps:
-#       - task: Docker@2
-#         displayName: Build and Push 
-#         inputs:
-#           command: buildAndPush
-#           containerRegistry: 'lakpriyagk-docker-hub-service-connection'
-#           Dockerfile: full-app/Dockerfile
-#           repository: $(DOCKER_REGISTORY)
-#           tags: '$(Build.BuildId)'
+      - task: AzureResourceManagerTemplateDeployment@3
+        inputs:
+          azureResourceManagerConnection: $(ARM_SERVICE_CONNECTION)
+          action: 'deleteRG'
+          resourceGroupName: 'temp-rg'
+          location: $(LOCATION)
+          deploymentScope: 'Resource Group'
