change template location

--- a/full-app/azure-pipelines-full-app.yml
+++ b/full-app/azure-pipelines-full-app.yml
@@ -33,7 +33,7 @@ stages:
           resourceGroupName: 'temp-rg'
           location: westeurope
           deploymentMode: 'Incremental'
-          templateLocation : 'URL of the file'
+          templateLocation : 'Linked Artifact'
           csmFile: './infrastucture/MySqldb/azuredeploy.json'
           csmParametersFile: './infrastucture/MySqldb/azuredeploy.parameters.json'
           deploymentScope: 'Resource Group'    
