app properties file for builds

--- a/full-app/Dockerfile
+++ b/full-app/Dockerfile
@@ -17,4 +17,4 @@ COPY /target/contoso-payroll-1.0.jar ./
 
 EXPOSE 8080
 
-CMD java -jar contoso-payroll-1.0.jar
+CMD java -jar contoso-payroll-1.0.jar --spring.config.location=classpath:/docker-application.properties
