--- a/full-app/src/main/resources/docker-application.properties
+++ b/full-app/src/main/resources/docker-application.properties
@@ -1,6 +1,6 @@
 spring.data.rest.base-path=/api
 
-spring.datasource.url= jdbc:mysql://contoso-pay-db-server-temp.mysql.database.azure.com:3306/contosodb?useSSL=true&serverTimezone=UTC
+spring.datasource.url= jdbc:mysql://contoso-pay-db-server.mysql.database.azure.com:3306/contosodb?useSSL=true&serverTimezone=UTC
 spring.datasource.username= sqladmin@contoso-pay-db-server
 spring.datasource.password= Password1234!
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
