--- a/infrastucture/azure-pipelines-infra.yml
+++ b/infrastucture/azure-pipelines-infra.yml
@@ -16,7 +16,20 @@ variables:
 - name: RESOURCEGROUP_NAME
   value: '${{ parameters.ResourceGroupName }}'
 - name: LOCATION
-  value: '${{ parameters.Region }}'
+  type: string
+  default: 'westeurope'
+  values:
+  - eastus
+  - southeastasia
+  - northeurope
+  - westeurope
+  - uksouth
+  - centralus
+  - centralindia
+  - eastasia
+  - westus
+  - southindia
+  - australiaeast
 
 trigger:
   branches:
@@ -44,9 +57,10 @@ stages:
          location: $(LOCATION)
          deploymentMode: 'Incremental'
          templateLocation : 'URL of the file'
-         csmFileLink: 'https://raw.githubusercontent.com/lakpj/contoso-payroll/main/infrastucture/AppServicePlan/azuredeploy.json'
-         csmParametersFileLink: 'https://raw.githubusercontent.com/lakpj/contoso-payroll/main/infrastucture/AppServicePlan/azuredeploy.parameters.json'
+         csmFile: './infrastucture/AppServicePlan/azuredeploy.json'
+         csmParametersFile: './infrastucture/AppServicePlan/azuredeploy.parameters.json'
          deploymentName: 'DeployAppServicePlan'
+         workingDirectory: '$(Build.SourcesDirectory)/full-app'
 - stage: DeployMySqlDatabase 
   jobs:  
   - job: DeployDatabase 
@@ -60,10 +74,22 @@ stages:
         location: $(LOCATION)
         deploymentMode: 'Incremental'
         templateLocation : 'URL of the file'
-        csmFileLink: 'https://raw.githubusercontent.com/lakpj/contoso-payroll/main/infrastucture/MySqldb/azuredeploy.json'
-        csmParametersFileLink: 'https://raw.githubusercontent.com/lakpj/contoso-payroll/main/infrastucture/MySqldb/azuredeploy.parameters.json'
+        csmFile: './infrastucture/MySqldb/azuredeploy.json'
+        csmParametersFile: './infrastucture/MySqldb/azuredeploy.parameters.json'
         deploymentScope: 'Resource Group'    
-        deploymentName: 'DeployDatabase'
+        deploymentName: 'DeployDatabaseServer'
+        workingDirectory: '$(Build.SourcesDirectory)/full-app'
+    - task: AzureMysqlDeployment@1
+      inputs:
+        azureSubscription: $(ARM_SERVICE_CONNECTION)
+        ServerName: $(MYSQL_SERVER_NAME)
+        SqlUsername: $(MYSQL_USER_NAME)
+        SqlPassword: $(MYSQL_PWD)
+        TaskNameSelector: 'InlineSqlTask'
+        SqlInline: |
+          DROP DATABASE IF EXISTS contosodb;
+          CREATE DATABASE contosodb;
+          USE contosodb;
 - stage: DeployWebappToServicePlan 
   dependsOn:
   - DeployMySqlDatabase
@@ -80,10 +106,11 @@ stages:
         location: $(LOCATION)
         deploymentMode: 'Incremental'
         templateLocation : 'URL of the file'
-        csmFileLink: 'https://raw.githubusercontent.com/lakpj/contoso-payroll/main/infrastucture/Webapp/azuredeploy.json'
-        csmParametersFileLink: 'https://raw.githubusercontent.com/lakpj/contoso-payroll/main/infrastucture/Webapp/azuredeploy.parameters.json'
+        csmFile: './infrastucture/Webapp/azuredeploy.json'
+        csmParametersFile: './infrastucture/Webapp/azuredeploy.parameters.json'
         deploymentScope: 'Resource Group'    
-        deploymentName: 'DeployWebapp'  
+        deploymentName: 'DeployWebapp'
+        workingDirectory: '$(Build.SourcesDirectory)/full-app'
 - stage: EnableMonitoringToWebapp 
   dependsOn:
   - DeployWebappToServicePlan
@@ -100,7 +127,8 @@ stages:
         location: $(LOCATION)
         deploymentMode: 'Incremental'
         templateLocation : 'URL of the file'
-        csmFileLink: 'https://raw.githubusercontent.com/lakpj/contoso-payroll/main/infrastucture/AppMonitoring/azuredeploy.json'
-        csmParametersFileLink: 'https://raw.githubusercontent.com/lakpj/contoso-payroll/main/infrastucture/AppMonitoring/azuredeploy.parameters.json'
+        csmFile: './infrastucture/AppMonitoring/azuredeploy.json'
+        csmParametersFile: './infrastucture/AppMonitoring/azuredeploy.parameters.json'
         deploymentScope: 'Resource Group'    
         deploymentName: 'DeployMonitoring'
+        workingDirectory: '$(Build.SourcesDirectory)/full-app'
