add resource group removing pipeline

--- a/full-app/azure-pipelines-full-app.yml
+++ b/full-app/azure-pipelines-full-app.yml
@@ -78,4 +78,4 @@ stages:
           action: 'deleteRG'
           resourceGroupName: 'temp-rg'
           location: $(LOCATION)
-          deploymentScope: 'Resource Group'
+          deploymentScope: 'Subscription'
